# Algoherence

./: .gitignore  Dockerfile  LICENSE  README.md  agent.py  alpaca_bot_tester.py  lit.py  pyproject.toml  requirements.txt  test.ipynb  text  tools.py
.github/workflows/: docker-build.yaml
src/algoherence/: agent.py  app.py  search.py  tools.py
table/: AAPL_mean_reversion_backtest.csv  MSFT_mean_reversion_backtest.csv  ROI_mean_reversion_backtest.csv
tests/: test_tools.py
